argocd-config/apps/traefik/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: traefik
spec:
  ingressClassName: nginx
  rules:
    - host: demo-pierrickg.playground.padok.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
